--- a/Site/templates/index.html
+++ b/Site/templates/index.html
@@ -10,7 +10,9 @@
 <body>
 
 <div class="container mt-3">
-  <h2>Stacked form</h2>
+  <h2>Большой Опрос Не Менее Большого Василия Зерзеле</h2>
+  <p>Привет! Этот сайт был создан для исследования того, насколько пользователи сети интернет</p>
+  <p>знакомы с Ангелами, Стручками и прочими лингвистическими терминами. Для того чтобы начать, зарегестрируйтесь:</p>
   <form action="/action_page.php">
     <div class="mb-3 mt-3">
       <label for="email">Email:</label>
@@ -22,7 +24,7 @@
     </div>
     <div class="form-check mb-3">
       <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" name="remember"> Remember me
+        <input class="form-check-input" type="checkbox" name="remember"> Я соглашаюсь на опрос
       </label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
